syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


option go_package = "github.com/merynayr/auth/pkg/auth_v1;auth_v1";

service AuthV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum role {
  USER = 0;
  ADMIN = 1;
}

message AuthInfo {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  role role = 5;
}

message Auth {
  int64 id = 1;
  string name = 2;
  string email = 3;
  role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateAuthInfo {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message CreateRequest { 
  AuthInfo info = 1;
}

message CreateResponse { 
  int64 id = 1; 
}

message GetRequest { 
  int64 id = 1; 
}

message GetResponse { 
  Auth auth = 1; 
}

message UpdateRequest {
  UpdateAuthInfo info = 1;
}

message DeleteRequest { 
  int64 id = 1; 
}